Move some more localisations into the gem

--- a/config/locales/audited_timeline.en.yml
+++ b/config/locales/audited_timeline.en.yml
@@ -5,3 +5,8 @@ en:
       attribute: Attribute
       from: Old
       to: New
+    yes: Yes
+    no: No
+  time:
+    formats:
+      audited_timeline: "%Y-%m-%d %H:%M"
