fix missing translation errors because of booleans in the locale file

--- a/config/locales/audited_timeline.de.yml
+++ b/config/locales/audited_timeline.de.yml
@@ -5,8 +5,8 @@ de:
       attribute: Attribut
       from: Bisher
       to: Neu
-    yes: Ja
-    no: Nein
+    'yes': Ja
+    'no': Nein
   time:
     formats:
       audited_timeline: "%Y-%m-%d %H:%M"
