Added translation for abort (fixes #30516)

--- a/config/locales/audited_timeline.de.yml
+++ b/config/locales/audited_timeline.de.yml
@@ -8,6 +8,10 @@ de:
       value: Wert
     'yes': Ja
     'no': Nein
+  item:
+    abortion_reason:
+      other: "Andere"
+      cancelled: "Gekündigt"
   time:
     formats:
       audited_timeline: "%Y-%m-%d %H:%M"
